[DATALAB-2395] fixed bug with Reconfiguring text that overlapped stop icon

--- a/services/self-service/src/main/resources/webapp/src/app/administration/management/management-grid/management-grid.component.scss
+++ b/services/self-service/src/main/resources/webapp/src/app/administration/management/management-grid/management-grid.component.scss
@@ -100,7 +100,7 @@
 
     .status {
       width: 10% !important;
-      min-width: 140px;
+      min-width: 125px;
     }
 
     .type {
@@ -110,7 +110,7 @@
 
     .resources {
       width: 27%;
-      min-width: 225px;
+      min-width: 240px;
     }
 
     .settings {
